<resources>

    <string name="app_name">Drachen!!!</string>

    <string name="username">Username</string>

    <string name="password">Password</string>
    <string name="server_baseURL">https://10.0.2.2:8443</string>
    <string name="please_wait_">Please wait ...</string>
    <string name="load_QuestPrototype">Downloading available Quests...</string>
    <string name="startQuest">Start</string>
    <string name="starting_quest">Starting Quest</string>
	<string name="your_location">Current Location</string>
	<string name="item_at_location">Items at Location:</string>
	<string name="item_in_inventory">Items of %s</string>
	<string name="greetings">Greetings %1$s</string>
	<string name="logging_in">Logging in ...</string>
	<string name="logging_out">Logging out ...</string>
	<string name="load_npc">load NPC ...</string>
	<string name="perform_register">Register ...</string>
	<string name="abortQuest">Abort</string>
	<string name="finshQuest">Finish</string>
	<string name="details">Details</string>
	<string name="aborting_quest">Aborting Quest</string>
	<string name="finishing_quest">Finishing Quest</string>
	<string name="load_Quests">load Quests</string>
	<string name="unknown">Unknown</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<string name="pref_serverBaseUrl">Server: Base URL</string>
	<string name="pref_hostport">Host port</string>

	<string name="status_ongoing">ongoing</string>
    <string name="status_failed">failed</string>
    <string name="status_succeeded">succeeded</string>
    <string name="status_succeededFin">finished</string>
    <string name="logout">Logout</string>
    <string name="displayName">Display name</string>
    <string name="refresh">Refresh</string>
    <string name="force_logout">Force logout</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    
    <string name="register_failed">Register failed.</string>
    <string name="login_failed">Login failed.</string>
    <string name="logout_failed">Logout failed.</string>
    <string name="please_try_again">Please try again.</string>
    
    <string name="internal_process_error">An internal server error has occurred:\n\'%1$s\'.</string>
    <string name="missing_parameter_s">Missing Parameter \'%s\'.</string>
    <string name="id_not_found_parameter_s">Id of \'%s\' was not found.</string>
    <string name="username_already_used">The username is already used.</string>
    <string name="param_s_not_unique">\'%s\' is not unique.</string>
    <string name="param_s_too_long">\'%s\' is too long.</string>
    <string name="param_s_too_long_max_char">\'%1$s\' is too long (max %2$d character).</string>
    <string name="param_s_too_short">\'%s\' is too short.</string>
    <string name="param_s_too_short_min_char">\'%1$s\' is too short (min %2$d character).</string>
    <string name="param_s_wrongformat">\'%s\' has an invalid format.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="access_denied_logged_out">Access denied, maybe you\'re already logged out.</string>
    <string name="grats_bug">congratulations you found a strange bug.</string>
    <string name="logged_in_no_access">Logged in but no access to resource.\nPlease Try again</string>
    <string name="access_denied">Access to resource/request denied.</string>
    <string name="start_quest_failed">Failed to start Quest</string>
    <string name="quest_not_qualified">You are not qualified for this quest.</string>
    <string name="quest_cannot_repeated">You cannot repeat this quest.</string>
    <string name="quest_still_ongoing">You are already on this quest.</string>
    <string name="quest_abortion_failed">Quest abortion failed</string>
    <string name="quest_finishing_failed">Quest finishing failed</string>
    <string name="quest_not_yours">This is not your quest!</string>
    <string name="quest_already_finished">This quest is already finished.</string>
    <string name="questtarget_s_not_success">The quest target %1$s isn\'t succeeded.</string>
    <string name="questtarget_d_not_suc_not_found">Quest target (id=%1$d) isn\'t succeeded and not found locally.</string>
    <string name="action_fight">Fight</string>
    <string name="action_run">Run</string>
    <string name="use_skill">Use Skill</string>
    <string name="char_uses_skill">%1$s uses %2$s</string>
    <string name="select_a_skill">Select a skill</string>
    <string name="ok">OK</string>
    <string name="sensor">Sensor</string>
    <string name="quests">Quests</string>
    <string name="hint_1">Hint</string>
    <string name="hint_2">Next hint</string>
    <string name="hint_3">OK the walkthrough</string>
    <string name="started_date_time">Started: %1$s %2$s</string>
    <string name="npc_talk">%1$s: „%2$s“</string>

    <string name="inventory">Inventory</string>
    <string name="enter_room">Enter a room</string>
    <string name="leave_room">Leave this room</string>
</resources>
