<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".Login_Activity" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/username"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="1"
            android:text="@string/password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="2"
            android:text="@string/displayName"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextDisplayName"
            android:layout_width="fill_parent"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white" />
    </GridLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>